# MixSD

./: .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml
environment/: install_flash_attn.sh  mathrl_env.yml  mathrl_env_full.yml  opsd_env.yml  setup_env.sh
mixsd/: __init__.py  mix_distribution_sampling.py
mixsd/eval/: checkpoint_eval.py  error_analysis.py  eval_output.py  first_peak.py  humaneval.py  math_verify.py  mmlu.py  numinamath_eval.py  simpleqa.py
mixsd/eval/scripts/: eval_output.sh
mixsd/knowledge_dataset/: generate_mixed_distribution_sft_data.py  generate_sft_data.py  knowledge_graph.py  metadata.py
mixsd/knowledge_dataset/mquake_same_format/: generate_from_mquake.py
mixsd/knowledge_dataset/scripts/: create_mquake_datasets.sh  create_sft_datasets.sh
mixsd/math_operation_dataset/: cot.py  generate_datasets.py  generate_mixed_distribution_sft_data.py  operation_func.py  operation_func_easy.py  prompt.py
mixsd/math_operation_dataset/scripts/: create_datasets.sh
mixsd/simpleqa_dataset/: filter_correct_intersection.py  generate_datasets.py  generate_mixed_distribution_sft_data.py
mixsd/train/: _opsd_sft_runner.py  prepare_data_full.py
mixsd/train/knowledge_opsd/: knowledge_environment.py  opsd_distillation_config.yaml  register_dataset.py  run_opsd.py  run_sft.py  sft_config.yaml
mixsd/train/math_operations_opsd/: __init__.py  opsd_common.py  opsd_distillation_config.yaml  register_dataset.py  run_opsd.py  run_sft.py  sft_config.yaml  system_prompt.txt
mixsd/train/memit/: run_memit.py
mixsd/train/simpleqa_opsd/: run_opsd.py  (+4 more)
(+41 files in other folders)
